# trady

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: 1-general.md  2-blank.md
.github/workflows/: linting.yaml
docs/: contributing.md
requirements/: base.txt  dev.txt  linting.txt
trady/: __init__.py  binance.py  exception.py  exceptions.py  interface.py  settings.py
trady/datatypes/: __init__.py  account.py  balance.py  candlestick.py  market.py  position.py  rules.py  stats.py  symbol.py
trady/exchanges/: __init__.py
trady/exchanges/binance/: __init__.py  binance.py  interface.py  settings.py
