# Packaging (and other) tools configuration.
#
# Resources
# ---------
# Packaging documentation:
#  - https://packaging.python.org/en/latest/
# Configuration overview:
#  - https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# Configuration specification:
#  - https://packaging.python.org/en/latest/specifications/pyproject-toml/

[project]
name = "trady"
description = "A single interface for various exchanges."
version = "0.2.0"
requires-python = ">= 3.12"
dependencies = [
  "requests==2.32.3",
  "pydantic==2.10.1",
  "pydantic-settings==2.6.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

# https://docs.astral.sh/ruff/settings/#top-level
[tool.ruff]
required-version = "0.7.0"
line-length = 100
cache-dir = "local/.ruff_cache"

# https://docs.astral.sh/ruff/settings/#lint
[tool.ruff.lint]
extend-select = ["D", "I"]
ignore = ["D100", "D101", "D102", "D105", "D107", "D203", "D213", "D413"]

# https://docs.astral.sh/ruff/settings/#lintisort
[tool.ruff.lint.isort]
lines-after-imports = 2

# https://mypy.readthedocs.io/en/stable/config_file.html
[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_decorators = true
disallow_subclassing_any = true
check_untyped_defs = true
implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
warn_unreachable = true
cache_dir = "local/.mypy_cache"
